# crypto-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  init.sql  main.rs  package-lock.json  readme.md  sample.env
queries/: limit_orders.sql
src/: cornucopia.rs  create_buy_order.rs  create_sell_order.rs  get_token_balance.rs  get_token_price.rs  main.rs  routes.rs  utils.rs
src/custom_types/: token_price.rs  types.rs
src/queries/: limit_orders.sql
src/routes/: create_buy_order.rs  create_sell_order.rs  get_token_balance.rs
src/utils/: check_prices.rs  process_orders.rs  send_transaction.rs  transaction_processor.rs
