[package]
name = "crypto-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
solana-client = "2.1.8"
solana-sdk = "2.1.8"
spl-associated-token-account = "6.0.0"
dotenv = "0.15.0"
solana-rpc-client-api = "2.1.8"
tower-http = { version = "0.3", features = ["full"] }

[[bin]]
name = "crypto-backend"
path = "src/main.rs"
