[package]
name = "crypto-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

# Reqwest for external APIs
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"

# Axum web framework
axum = "0.6"

# Asynchronous runtime and utilities
tokio = { version = "1", features = ["full"] }
futures = "*"

# Async Postgres driver
tokio-postgres = { version = "*", features = [
    "with-serde_json-1",
    "with-time-0_3",
    "with-uuid-1",
    "with-eui48-1"
]}
postgres_query = "*"

# Solana support 
solana-client = "2.1.8"
solana-sdk = "2.1.8"
spl-associated-token-account = "6.0.0"
solana-rpc-client-api = "2.1.8"

# Tower (used for middleware and routing)
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }

# Postgres types with derive feature
postgres-types = { version = "*", features = ["derive"] }

# Cornucopia for async Postgres interactions
cornucopia_async = { version = "*", features = ["with-serde_json-1"] }

# Extra types
time = { version = "0.3", features = ["serde"] }
uuid = "*"
eui48 = "*"
rust_decimal = { version = "*", features = ["db-postgres"] }

# Tracing for logging
tracing-subscriber = "0.3"
tracing = "0.1"

dotenv = "0.15.0"

[[bin]]
name = "crypto-backend"
path = "src/main.rs"
